[package]
name = "exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
actix-web = "4.2.1"
actix-rt = "2.4.0"
tokio = "1.21.2"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
uuid = "1.3.0"

# Tracing log
tracing = { version = "0.1.37", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.2"

# Template engine
handlebars = { version = "4.3.6", features = ["dir_source"] }
wkhtmlapp = "1.0.2"
headless_chrome = "1.0.5"
